correct letter-spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,14 +22,14 @@ body{
     font-weight: 500;
     font-size: 16px;
     line-height: 150%;
-    letter-spacing: 0.02cm;
+    letter-spacing: 0.02em;
     color: #434455;
 }
 
 li a:hover{
     font-size: 16px;
     line-height: 150%;
-    letter-spacing: 0.02cm;
+    letter-spacing: 0.02em;
     color: #404bbf;
 }
 
@@ -44,14 +44,14 @@ address{
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
-    letter-spacing: 0.02cm;
+    letter-spacing: 0.02em;
 }
 
 .contacts .link:hover{
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
-    letter-spacing: 0.02cm;
+    letter-spacing: 0.02em;
     color: #404bbf;
 }
 
@@ -65,13 +65,13 @@ ul{
 
 .main-page{
     background-color: #2e2f42;
-    letter-spacing: 0.02cm;
+    letter-spacing: 0.02em;
 }
 
 .main-page-title{
     font-size: 56px;
     line-height: 107%;
-    letter-spacing: 0.02cm;
+    letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
 }
@@ -82,7 +82,7 @@ ul{
     padding: 16px 32px;
     font-weight: 500;
     line-height: 1.5;
-    letter-spacing: 0.04cm;
+    letter-spacing: 0.04em;
     color: #ffffff;
 }
 
@@ -100,7 +100,7 @@ h2{
     font-weight: 500;
     font-size: 36px;
     line-height: 111%;
-    letter-spacing: 0.02cm;
+    letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
 }
@@ -112,14 +112,14 @@ h2{
 .studio-list-title{
     font-size: 20px;
     line-height: 120%;
-    letter-spacing: 0.02cm;
+    letter-spacing: 0.02em;
     color: #2e2f42;
 }
 
 .studio-list-description{
     font-size: 16px;
     line-height: 150%;
-    letter-spacing: 0.02cm;
+    letter-spacing: 0.02em;
     color: #434455;
 }
 
@@ -128,7 +128,7 @@ h2{
 }
 
 .team-title{
-    letter-spacing: 0.02cm;
+    letter-spacing: 0.02em;
     text-transform: capitalize;
 }
 
